overlays/uksouth-staging/default/ingress/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: api.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
  - host: api.${cluster_name}.${location}.bink.sh
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: angelia-api
            port:
              number: 80
      - path: /auth_transactions/authorize
        pathType: Prefix
        backend:
          service:
            name: zephyrus-api
            port:
              number: 80
      - path: /auth_transactions/amex
        pathType: Prefix
        backend:
          service:
            name: zephyrus-api
            port:
              number: 80
      - path: /auth_transactions/mastercard
        pathType: Prefix
        backend:
          service:
            name: zephyrus-api
            port:
              number: 80
      - path: /auth_transactions/visa
        pathType: Prefix
        backend:
          service:
            name: zephyrus-api
            port:
              number: 80
      - path: /auth_transactions_mock/mastercard
        pathType: Exact
        backend:
          service:
            name: skiron-api
            port:
              number: 80
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: simplenginx
            port:
              number: 80
      - path: /content
        pathType: Prefix
        backend:
          service:
            name: iris-api
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /password
        pathType: Prefix
        backend:
          service:
            name: lethe
            port:
              number: 80
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /join
        pathType: Prefix
        backend:
          service:
            name: midas-api
            port:
              number: 80
      - path: /audit
        pathType: Prefix
        backend:
          service:
            name: atlas-api
            port:
              number: 80
      - path: /mock
        pathType: Prefix
        backend:
          service:
            name: momus
            port:
              number: 80
      - path: /tlog/whsmith
        pathType: Prefix
        backend:
          service:
            name: tlog-receiver
            port:
              number: 80
      - backend:
          service:
            name: harmonia-api
            port:
              number: 80
        path: /txm/config/keys
        pathType: Prefix
      - path: /txm/import/bink-loyalty/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/import/bink-payment/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/matching/force_match
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/mids/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/status/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /eos
        pathType: Prefix
        backend:
          service:
            name: eos-api
            port:
              number: 80
      - path: /bpl/admin
        pathType: Prefix
        backend:
          service:
            name: event-horizon-rw
            port:
              number: 80
      - path: /bpl/admin-ro
        pathType: Prefix
        backend:
          service:
            name: event-horizon-ro
            port:
              number: 80
      - path: /bpl/loyalty
        pathType: Prefix
        backend:
          service:
            name: polaris-api
            port:
              number: 80
      - path: /bpl/rewards
        pathType: Prefix
        backend:
          service:
            name: vela-api
            port:
              number: 80
      - path: /bpl/vouchers
        pathType: Prefix
        backend:
          service:
            name: carina-api
            port:
              number: 80
      - path: /cardstatus
        pathType: Prefix
        backend:
          service:
            name: pelops-api
            port:
              number: 80
  tls:
  - hosts:
    - api.${cluster_name}.${location}.bink.sh
    secretName: api.${cluster_name}.${location}.bink.sh
